--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #bf5700;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
@@ -45,7 +45,7 @@ $background-alt: #f2f2f5;
 $border: #dcd9d9;
 
 // Define text colors
-$heading: #374054;
+$heading: #333f48;
 $text: #74808a;
 
 /*
