--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -45,8 +45,8 @@ $background-alt: #f2f2f5;
 $border: #dcd9d9;
 
 // Define text colors
-$heading: #333f48;
-$text: #74808a;
+$heading: #374054;
+$text: #333f48;
 
 /*
     ---------------------
