--- a/css/styles.css
+++ b/css/styles.css
@@ -6,17 +6,13 @@
     --top-level-dimension: calc(var(--top-level-font) * var(--golden-ratio) * var(--golden-ratio))
 }
 
-@font-face {
-    font-family: "Alegreya";
-    src: url("./css/fonts/alegreya-regular-webfont.woff") format("woff")
-}
-
 /* content is the top-level div */
 .content {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translateX(-50%);
+    scroll-behavior: smooth;
 }
 
 /* main block CSS */
