added navbar, additional sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,45 +8,46 @@
 
 /* content is the top-level div */
 .content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%);
+    position: relative;
+    margin-left: 400px;
+    margin-right: 50px;
+    margin-top: 50px;
+    /* top: 50%; */
+    
+    /* transform: translateX(-50%); */
     scroll-behavior: smooth;
 }
 
 /* main block CSS */
 .main_block {
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    position: fixed;
+    left: 0;
+    top: 0;
     background-color: #bf5700;
-    max-width: calc(2 * var(--top-level-dimension) * var(--golden-ratio));
-    max-height: calc(2 * var(--top-level-dimension));
-    padding-top: var(--top-level-dimension);
-    padding-bottom: var(--top-level-dimension);
-    padding-left: calc(var(--top-level-dimension) * var(--golden-ratio));
-    padding-right: calc(var(--top-level-dimension) * var(--golden-ratio));
-}
+    height: 100%;
+    box-sizing: border-box;
+} 
 
 .main_block a:link {
-    color: #0432ff;
+    color: white;
     font-style: italic;
     text-decoration: none;
 }
 .main_block a:visited {
-    color: #0432ff;
+    color: white;
     font-style: italic;
     text-decoration: none;
 }
 
 .main_block h1 {
-    text-align: center;
+    text-align: left;
     color: white;
     font-size: var(--top-level-font);
     font-family: 'Alegreya', 'Times New Roman';
     font-weight: normal;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .main_block h2 {
     text-align: center;
@@ -54,6 +55,8 @@
     font-family: 'Times New Roman';
     font-size: calc(var(--top-level-font) / var(--golden-ratio));
     font-weight: normal;
+    margin-left: 10px;
+
 }
 .main_block h3 {
     text-align: center;
@@ -61,18 +64,49 @@
     font-family: 'Times New Roman';
     font-size: calc(calc(var(--top-level-font) / var(--golden-ratio) / var(--golden-ratio)));
     font-weight: normal;
+    margin-left: 10px;
+}
+
+/*nav bar styling */
+
+ul {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-inline-start: 0px;
+}
+
+li {
+    list-style-type: none;
+}
+.main_nav > ul > .active > a {
+    color: black;
+    background-color: black;
 }
 
 
-/* portfolio CSS */
-.portfolio {
-    position: relative;
+.main_nav{
+    text-align: center;
+    background-color: #F28A33; /*lightened burnt orange 10%*/
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 0px;
+}
+
+.content-item {
+    margin-top: 10px;
+    margin-bottom: 10px;
     border: 1px solid black;
     padding-top: calc(var(--top-level-dimension));
     padding-bottom: calc(var(--top-level-dimension) * var(--golden-ratio) * var(--golden-ratio));
 }
 
-.portfolio h1{
+/* projects CSS */
+.projects {
+    /* position: relative; */
+    
+}
+
+.projects h1{
     color: black;
     text-align: center;
     font-family: 'Times New Roman';
@@ -80,7 +114,7 @@
     font-weight: normal;
 }
 
-.portfolio h2{
+.projects h2{
     color: black;
     text-align: center;
     font-family: 'Times New Roman';
@@ -88,14 +122,14 @@
     font-weight: normal;
 }
 
-.portfolio h3{
+.projects h3{
     color: black;
     text-align: center;
     font-family: 'Times New Roman';
     font-size: calc(calc(var(--top-level-font) / var(--golden-ratio) / var(--golden-ratio)));
     font-weight: normal;
 }
-.portfolio a:link{
+.projects a:link{
     color: #0432ff;
     text-decoration: none;
     font-style: italic;
